tests/compile/command_modules/raytracing.stderr
In file included from raytracing.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:9:
commands.hpp:114:17: error: static assertion failed: command recording has unresolved dependencies
  114 |                 static_assert(false, norm.second);
      |                               ^~~~~
raytracing.cpp:143:3: note: in instantiation of function template specialization 'rcgp::operator|<rcgp::ActivatePipeline<rcgp::PipelineKind::eRayTracing>, rcgp::NormalEntry<norm_entry{{1, &tlas, 0}, 1, {{0, 0}, {0, 0}}}>, rcgp::NormalEntry<norm_entry{{1, &image, 0}, 1, {{0, 0}, {0, 0}}}>, rcgp::TerminalSentinel<rcgp::PipelineKind::eRayTracing>>' requested here
  143 |                 | trace_rays(sbt.raygen, sbt.miss, sbt.hit, sbt.callable, 1024, 1024);
      |                 ^
1 error generated.
